# gmi-html-translator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
generator/: fs_writer.hpp  generator.h  translator.hpp
generator/support/: copy_batch.hpp  parts.hpp
testing/example/subdir1/: aa
testing/example/subdir1/subsubdir1/b/: 1.0.c
testing/example/subdir1/subsubdir2/: example.gmi
testing/example/subdir2/subsubdir1/: index.gmi
